<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/linebg"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.stayinspired.FavouritesActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/finalimg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/frame"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            android:src="@drawable/app_icon_1" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="TDHCondensed"
            android:paddingTop="15dp"
            android:text="@string/hello_world"
            android:textColor="#6E2126"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sharebutton11"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_margin="3dp"
                android:background="@drawable/round"
                android:fontFamily="BebasNeue"
                android:onClick="share231"
                android:padding="1dp"
                android:text="@string/share123"
                android:textColor="#fff"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>