<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linebg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stayinspired.ResultActivity" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="TDHCondensed"
                android:text="@string/result"
                android:textColor="#6E2126"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="TDHCondensed"
                android:text="@string/zero"
                android:textColor="#6E2126"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="TDHCondensed"
                android:paddingBottom="5dp"
                android:text="@string/result1"
                android:textColor="#6E2126"
                android:textSize="16sp" />
        </LinearLayout>
    </TableRow>
    
    <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/button119"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@drawable/round"
            android:fontFamily="TDHCondensed"
            android:gravity="center"
            android:onClick="gotoquiz"
            android:padding="2dp"
            android:text="@string/ta"
            android:textColor="#fff"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="0.20" >
        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/home_icon"
                android:contentDescription="@string/app_name"
                android:onClick="home1"
                android:padding="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/last_read_icon"
                android:contentDescription="@string/app_name"
                android:onClick="lastread1"
                android:padding="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/favourites_icon"
                android:contentDescription="@string/app_name"
                android:onClick="fav1"
                android:padding="5dp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="0.20" >
        </View>
    </TableRow>

</TableLayout>